# aiEthicsMDD

./: .env.example  .gitignore  README.md  documentanalysismodel.py  pyproject.toml
account_takeover/: README.md  ato_deepeval.py  ato_deepeval_results.json  prompts.json  requirements.txt  summary_results.txt
aiei_l4/: ._models.py  __init__.py  config.py  models.py  pipeline.py  prompts.py  prompts_antonio.py  report.py  scoring.py  utils.py
scripts/: run_evaluation.py
secrets_management/: README.md  prompts.json  requirements.txt  secrets_deepeval.py  secrets_results.json  summary.txt
tests/: test_pipeline.py  test_prompts.py  test_scoring.py
